	added -wait option to sqlr-start for non-Windows
	disabled -disable-new-window option to sqlr-start for non-Windows
	non-ascii character encodings work with the C# API now
	rudiments prompt class is used instead of using readline directly now
	renamed "logger-events" to just "events"
	added notification framework and "events" module
	added connection schedule framework and "cron" module

0.65.0 - removed erroneous SQLR_SQLExecute export in ODBC driver
	fixed call type of internal ODBC driver functions and made them static
	fixed --disable-API flags in configure.vbs
	fixed bad user/password copy logic in ODBC SQLConnect function
	added missing default implementation of
		sqlrservercursor::getColumnTypeName()
	added parser debug option
	normalize translation can convert foreign decimals now
	updated missing-tnsnames.ora warning
	updated sqlr-start and sqlr-scaler to run programs using fully
		qualified path names
	fixed query timer in sqlrsh
	add timer="query/command" parameter to slowqueries logger
	added odbcversion parameter to ODBC connection
	updated erlang api to use the C++ compiler to link (for netbsd 7.0)
	added major-version check to node.js api for node 4.x+
	ODBC driver's SQLGetData can deal with NULL targetvalue now
	fixed normalize || bug
	fixed normalize bug that removed spaces around * for "all columns"
		improperly
	removed freetds warning, modern sybase has different library file names
	updates to support python3
	added several --disable options to the configure script for unix/linux
	removed sqlr-fields/sqlr-query and updated sqlrsh to provide the same
		functionality
	removed antiquated sqlrelay.dtd
	moved default example directory to share/sqlrelay/examples
	sqlrelay.conf example is installed under example directory now
	Python DB -> Python DB-API in the docs
	moved private members and support classes into C++ API's .cpp files
	removed -revision during link and adopted Semantic Versioning 2.0
	added missing get*List methods to Java API