@@ -1409,6 +1409,100 @@ void sqlrconfig_xmldom::normalizeTree() {
 			instance->deleteAttribute(datedelims);
 		}
 	}
+
+	// old router format to new router format
+	xmldomnode	*router=instance->getFirstTagChild("router");
+	if (!router->isNullNode()) {
+
+		// add a routers node if none exists
+		xmldomnode	*rtrs=instance->getFirstTagChild("routers");
+		if (rtrs->isNullNode()) {
+			rtrs=instance->appendTag("routers");
+		}
+
+		// add a connections node if none exists
+		xmldomnode	*cons=instance->getFirstTagChild("connections");
+		if (cons->isNullNode()) {
+			cons=instance->appendTag("connections");
+		}
+
+		// for each router.route node...
+		uint16_t	index=0;
+		stringbuffer	conid;
+		stringbuffer	str;
+		for (xmldomnode *route=router->getFirstTagChild("route");
+				!route->isNullNode();
+				route=route->getNextTagSibling("route")) {
+
+			// generate a connection id
+			conid.append("autogenerated-route-")->append(index);
+			index++;
+
+			// build the connect string
+			const char	*host=
+					route->getAttributeValue("host");
+			if (!charstring::isNullOrEmpty(host)) {
+				str.append("host=");
+				str.append(host)->append(';');
+			}
+			const char	*port=
+					route->getAttributeValue("port");
+			if (!charstring::isNullOrEmpty(port)) {
+				str.append("port=");
+				str.append(port)->append(';');
+			}
+			const char	*socket=
+					route->getAttributeValue("socket");
+			if (!charstring::isNullOrEmpty(socket)) {
+				str.append("socket=");
+				str.append(socket)->append(';');
+			}
+			const char	*user=
+					route->getAttributeValue("user");
+			if (!charstring::isNullOrEmpty(user)) {
+				str.append("user=");
+				str.append(user)->append(';');
+			}
+			const char	*password=
+					route->getAttributeValue("password");
+			if (!charstring::isNullOrEmpty(password)) {
+				str.append("password=");
+				str.append(password)->append(';');
+			}
+
+			// add a connections.connection node
+			xmldomnode	*con=cons->appendTag("connection");
+			con->setAttributeValue("connectionid",
+						conid.getString());
+			con->setAttributeValue("string",
+						str.getString());
+
+			// add a routers.router node
+			xmldomnode	*rtr=rtrs->appendTag("router");
+			rtr->setAttributeValue("module","regex");
+			rtr->setAttributeValue("connectionid",
+						conid.getString());
+
+			// for each query...
+			for (xmldomnode *query=route->getFirstTagChild("query");
+				!query->isNullNode();
+				query=query->getNextTagSibling("query")) {
+
+				// create a routers.router.pattern tag
+				rtr->appendTag("pattern")->
+					setAttributeValue("pattern",
+						query->getAttributeValue(
+								"pattern"));
+			}
+
+			// clear buffers
+			conid.clear();
+			str.clear();
+		}
+
+		// delete the old router tag
+		router->getParent()->deleteChild(router);
+	}
 }
 
 void sqlrconfig_xmldom::getTreeValues() {
