@@ -152,12 +152,12 @@ bool sqlrlogger_custom_nw::run(sqlrlistener *sqlrl,
 		dt.getMinutes(),
 		dt.getSeconds(),
 		sqlrcon->cont->connstats->index,
-		sec+usec/1000000.0,
+		((double)(sec*1000000+usec))/1000000.0,
 		errorcodebuf,
 		(long long)sqlrcur->getTotalRowsFetched(),
 		infobuf,
 		sqlbuf,
-		sec+usec/1000000.0,
+		((double)(sec*1000000+usec))/1000000.0,
 		sqlrcon->cont->connstats->clientaddr,
 		bindbuf
 		);
